Re-ran the openwire generator against all open wire versions.
git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-apollo/trunk@1236269 13f79535-47bb-0310-9956-ffa450edef68